--- a/package.json
+++ b/package.json
@@ -7,12 +7,56 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"prepare": "npm run smui-theme-light && npm run smui-theme-dark",
+		"smui-theme-light": "smui-theme compile src/theme/smui.css -i src/theme",
+		"smui-theme-dark": "smui-theme compile src/theme/dark/smui-dark.css -i src/theme/dark"
 	},
 	"devDependencies": {
+		"@smui-extra/accordion": "^7.0.0-beta.16",
+		"@smui-extra/autocomplete": "^7.0.0-beta.16",
+		"@smui-extra/badge": "^7.0.0-beta.16",
+		"@smui-extra/bottom-app-bar": "^7.0.0-beta.16",
+		"@smui-extra/site": "^7.0.0-beta.16",
+		"@smui/banner": "^7.0.0-beta.16",
+		"@smui/button": "^7.0.0-beta.16",
+		"@smui/card": "^7.0.0-beta.16",
+		"@smui/checkbox": "^7.0.0-beta.16",
+		"@smui/chips": "^7.0.0-beta.16",
+		"@smui/circular-progress": "^7.0.0-beta.16",
+		"@smui/common": "^7.0.0-beta.16",
+		"@smui/data-table": "^7.0.0-beta.16",
+		"@smui/dialog": "^7.0.0-beta.16",
+		"@smui/drawer": "^7.0.0-beta.16",
+		"@smui/fab": "^7.0.0-beta.16",
+		"@smui/floating-label": "^7.0.0-beta.16",
+		"@smui/form-field": "^7.0.0-beta.16",
+		"@smui/icon-button": "^7.0.0-beta.16",
+		"@smui/image-list": "^7.0.0-beta.16",
+		"@smui/line-ripple": "^7.0.0-beta.16",
+		"@smui/menu": "^7.0.0-beta.16",
+		"@smui/menu-surface": "^7.0.0-beta.16",
+		"@smui/notched-outline": "^7.0.0-beta.16",
+		"@smui/paper": "^7.0.0-beta.16",
+		"@smui/radio": "^7.0.0-beta.16",
+		"@smui/ripple": "^7.0.0-beta.16",
+		"@smui/segmented-button": "^7.0.0-beta.16",
+		"@smui/select": "^7.0.0-beta.16",
+		"@smui/slider": "^7.0.0-beta.16",
+		"@smui/snackbar": "^7.0.0-beta.16",
+		"@smui/switch": "^7.0.0-beta.16",
+		"@smui/tab": "^7.0.0-beta.16",
+		"@smui/tab-bar": "^7.0.0-beta.16",
+		"@smui/tab-indicator": "^7.0.0-beta.16",
+		"@smui/tab-scroller": "^7.0.0-beta.16",
+		"@smui/textfield": "^7.0.0-beta.16",
+		"@smui/tooltip": "^7.0.0-beta.16",
+		"@smui/top-app-bar": "^7.0.0-beta.16",
+		"@smui/touch-target": "^7.0.0-beta.16",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"smui-theme": "^7.0.0-beta.16",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
